# MicroNetwork.Library

./: .gitignore  .gitmodules  Build.ps1  CMakeLists.txt  GenerateApi.ps1  LFrameworkConfig.h  LibMicroNetwork.pro  Library.cpp  Library.h  README.md  main.cpp
Actions/: Program.cs
ApiGenerator/: CMakeLists.txt
Dependencies/: CMakeLists.txt  Dependencies.pri
Interfaces/: MicroNetwork.Common.h  MicroNetwork.Host.MemoryAccess.h  MicroNetwork.Host.h  MicroNetwork.Task.MemoryAccess.IDeviceToHost.InMarshaler.h  MicroNetwork.Task.MemoryAccess.IDeviceToHost.Serializer.In.h  MicroNetwork.Task.MemoryAccess.IHostToDevice.OutMarshaler.h  MicroNetwork.Task.MemoryAccess.IHostToDevice.Serializer.Out.h  MicroNetwork.Task.MemoryAccess.IStream.IoStreamDescriptor.h  MicroNetwork.Task.MemoryAccess.h
